--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,45 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.css';
+
+.card{
+  box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.1);
+  border: 1px solid #fefefe;
+  width: 100%;
+}
+
+.bg-purple{
+  background-color: #5F84E1;
+}
+
+i{
+  color: #5F84E1;
+  font-size: 1.5rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+
+.list-group-item{
+  cursor: pointer;
+}
+
+.list-group-item.active{
+  background-color: #F3F8FD;
+  border: 1px solid;
+  border-color: rgb(238, 238, 238);
+  box-shadow: 0px 1px 1px 0px rgba(27, 118, 222, 0.4);
+  color: black;
+}
+
+input, textarea{
+  outline: none;
+  color: grey;
+}
+
+input:focus{
+  border: 2px groove #5F84E1;
+}
+
+.w100p{
+  width: 100%;
+}
