--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,20 @@
 <div class="text-center p-3">
   <img src="https://automate.io/assets/img/automate-io-blue.png" />
-  <header class="card d-flex flex-row mt-2 p-2">
-      <i class="fas fa-plus-circle"></i>
-      <i class="fas fa-edit"></i>
-      <i class="fas fa-trash-alt"></i>
+  <header class="card d-flex flex-row justify-content-between align-items-center mt-2 p-2">
+      <div class="d-flex flex-row justify-content-between align-items-center">
+        <input placeholder="Search" class="pl-2 file-body" [(ngModel)]="searchInput" />
+      </div>
+      <div class="d-flex flex-row justify-content-between align-items-center">
+        <img src="https://avatars0.githubusercontent.com/u/32819661?s=460&u=d109d6fa155160404f70a5b76da5a63440edcdf9&v=4" alt="user-img" class="user-img" />
+        <span class="ml-2 text-secondary d-none d-md-block ">Maneesha Venigalla</span>
+      </div>
   </header>
   <main class="d-flex mt-4">
-    <section class="card mx-2" [ngStyle]="{ 'width' : showFolderSection ? '100%' : '35%' }">
+    <section class="card mx-2 d-none d-md-block" [ngStyle]="{ 'width' : showFolderSection ? '100%' : '35%' }">
       <app-automate-folder (collapsibleFolderBtnClick)="onCollapsibleFolderBtnClick($event)" (activeFolderClick)="onactiveFolderClick($event)"></app-automate-folder>
     </section>
     <section class="card mx-2" [ngStyle]="{ 'width' : showFileSection ? '100%' : '35%' }">
-      <app-automate-file (collapsibleFileBtnClick)="onCollapsibleFileBtnClick($event)" (fileDetails)="onFileDetails($event)" [activeFolder]="activeFolder"></app-automate-file>
+      <app-automate-file [searchTarget]="searchInput" (collapsibleFileBtnClick)="onCollapsibleFileBtnClick($event)" (fileDetails)="onFileDetails($event)" [activeFolder]="activeFolder"></app-automate-file>
     </section>
     <section class="card mx-2">
       <app-automate-input [activeFile]="activeFile" [activeFolder]="activeFolder"></app-automate-input>
