--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
       <app-automate-file [searchTarget]="searchInput" (collapsibleFileBtnClick)="onCollapsibleFileBtnClick($event)" (fileDetails)="onFileDetails($event)" [activeFolder]="activeFolder"></app-automate-file>
     </section>
     <section class="card mx-2">
-      <app-automate-input [activeFile]="activeFile" [activeFolder]="activeFolder"></app-automate-input>
+      <app-automate-input [activeFile]="activeFile" [activeFolder]="activeFolder" [filesData]="files"></app-automate-input>
     </section>
   </main>
 </div>
