--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="text-center p-3">
   <img src="https://automate.io/assets/img/automate-io-blue.png" />
+  <!-- ========================= HEADER START =========================== -->
   <header class="card d-flex flex-row justify-content-between align-items-center mt-2 p-2">
       <div class="d-flex flex-row justify-content-between align-items-center">
         <input placeholder="Search" class="pl-2 file-body" [(ngModel)]="searchInput" />
@@ -10,12 +11,15 @@
       </div>
   </header>
   <main class="d-flex mt-4">
+    <!-- ========================= FOLDER START =========================== -->
     <section class="card mx-2 d-none d-md-block" [ngStyle]="{ 'width' : showFolderSection ? '100%' : '35%' }">
       <app-automate-folder (collapsibleFolderBtnClick)="onCollapsibleFolderBtnClick($event)" (activeFolderClick)="onactiveFolderClick($event)"></app-automate-folder>
     </section>
+    <!-- ========================= FILE START =========================== -->
     <section class="card mx-2" [ngStyle]="{ 'width' : showFileSection ? '100%' : '35%' }">
       <app-automate-file [searchTarget]="searchInput" (collapsibleFileBtnClick)="onCollapsibleFileBtnClick($event)" (fileDetails)="onFileDetails($event)" [activeFolder]="activeFolder"></app-automate-file>
     </section>
+    <!-- ========================= INPUT START =========================== -->
     <section class="card mx-2">
       <app-automate-input [activeFile]="activeFile" [activeFolder]="activeFolder" [filesData]="files"></app-automate-input>
     </section>
